[svn r32403] TileReader arcsde gce spike, snapshot commit